--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -43,3 +43,12 @@ li {
 #copyright {
   font-size: 16px;
 }
+
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.related {
+  list-style: none;
+}
