--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -93,3 +93,22 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+
+/* ============ Resolving Conflicts ============*/
+
+#copyright {
+  /*with highest priority */
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+/* !important -- eliminates all priorities */
+footer p {
+  color: rgb(0, 255, 0) !important;
+}
