CSS and HTML files modified

--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -10,3 +10,12 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
 }
+.price {
+  font-size: 24px;
+}
+.shipping {
+  font-size: 12px;
+  color: #777;
+  text-transform: uppercase;
+  font-weight: bold;
+}
