--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -19,3 +19,26 @@ body {
   text-transform: uppercase;
   font-weight: bold;
 }
+.more-info:link,
+.more-info:visited {
+  color: #000;
+}
+.more-info:hover,
+.more-info:active {
+  text-decoration: none;
+}
+.details-title {
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.details-list {
+  list-style: square;
+}
+.add-cart {
+  background-color: #000;
+  color: #f7f7f7;
+  border: none;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
