--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -36,9 +36,13 @@ body {
 }
 .add-cart {
   background-color: #000;
-  color: #f7f7f7;
+  color: #fff;
   border: none;
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+}
+.add-cart:hover {
+  background-color: #fff;
+  color: #000;
 }
