--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -1,6 +1,8 @@
 body {
   font-family: sans-serif;
 }
+
+/* PRODUCT */
 .product {
   border: 4px solid black;
 }
@@ -10,6 +12,8 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
 }
+
+/* PRODUCT INFORMATION */
 .price {
   font-size: 24px;
 }
@@ -27,6 +31,8 @@ body {
 .more-info:active {
   text-decoration: none;
 }
+
+/* PRODUCT DETAILS */
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
@@ -34,6 +40,8 @@ body {
 .details-list {
   list-style: square;
 }
+
+/* BUTTON */
 .add-cart {
   background-color: #000;
   color: #fff;
