--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -2,7 +2,9 @@
   padding: 0;
   margin: 0;
 }
-
+body {
+  margin-left: 30px;
+}
 .main-header {
   margin: 50px 50px;
 }
@@ -52,6 +54,8 @@ p {
 
 li {
   font-size: 20px;
+  margin-left: 60px;
+  margin-bottom: 10px;
 }
 
 #author {
