--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -7,11 +7,24 @@ body {
 }
 .main-header {
   margin: 50px 50px;
+  background-color: #f7f7f7;
 }
 
 .article-header {
   margin-bottom: 40px;
 }
+
+article {
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding-top: 40px;
+}
+
 h1,
 h2,
 h3,
@@ -75,16 +88,6 @@ li {
 
 .related {
   list-style: none;
-}
-
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
 }
 
 a:link {
