--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -25,6 +25,13 @@ aside {
   border-bottom: 5px solid #1098ad;
   padding-top: 40px;
 }
+.what-HTML {
+  margin: 30px 0px 30px 0px;
+}
+
+.learn-HTML {
+  margin: 30px 0px 30px 0px;
+}
 
 h1,
 h2,
