--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -3,9 +3,17 @@
   margin: 0;
 }
 body {
-  margin-left: 30px;
-  margin-right: 30px;
+  color: #444;
+  font-family: sans-serif;
+  border-top: 10px solid #1098ad;
 }
+
+.container {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .main-header {
   margin: 50px 50px;
   background-color: #f7f7f7;
