--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -16,8 +16,15 @@ body {
 }
 
 .main-header {
-  margin: 50px 50px;
   background-color: #f7f7f7;
+  padding: 30px 0 30px 0;
+}
+.main-header-title {
+  color: #1098ad;
+  text-transform: uppercase;
+  font-style: italic;
+  font-size: 26px;
+  margin-bottom: 10px;
 }
 
 .article-header {
@@ -50,25 +57,9 @@ aside {
   height: auto;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-li {
-  font-family: sans-serif;
-  color: #444;
-}
-
-h1,
 h2,
 h3 {
   color: #1098ad;
-}
-h1 {
-  font-size: 26px;
-  text-transform: uppercase;
-  font-style: italic;
 }
 
 h3 {
