--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -1,16 +1,28 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
+}
+
+.container-product {
+  width: 750px;
+  margin: 40px auto;
 }
 
 /* PRODUCT */
 .product {
   border: 4px solid black;
 }
+
 .product-title {
   text-align: center;
   font-size: 22px;
   text-transform: uppercase;
-  background-color: #f7f7f7;
+  background-color: #f0f0f0;
+  padding: 10px 0;
 }
 
 /* PRODUCT INFORMATION */
@@ -22,7 +34,13 @@ body {
   color: #777;
   text-transform: uppercase;
   font-weight: bold;
+  margin-bottom: 25px;
 }
+
+.container-anchor {
+  margin: 10px 0 30px 0;
+}
+
 .more-info:link,
 .more-info:visited {
   color: #000;
@@ -36,9 +54,15 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 20px;
 }
 .details-list {
   list-style: square;
+  padding-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
 }
 
 /* BUTTON */
@@ -49,7 +73,11 @@ body {
   font-size: 20px;
   text-transform: uppercase;
   cursor: pointer;
+  width: 100%;
+  border-top: 4px solid black;
+  padding: 10px 0;
 }
+
 .add-cart:hover {
   background-color: #fff;
   color: #000;
