--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -6,6 +6,8 @@ body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+
+  position: relative;
 }
 
 .container {
@@ -19,6 +21,7 @@ body {
   background-color: #f7f7f7;
   padding: 30px 0 30px 0;
 }
+
 .main-header-title {
   color: #1098ad;
   text-transform: uppercase;
@@ -127,4 +130,14 @@ a:active {
 #copyright {
   /*ID selector is with highest priority */
   color: #444;
+}
+
+button {
+  padding: 20px;
+  font-size: 22px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
