--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  width: 700px;
+  width: 760px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -36,8 +36,21 @@ body {
 
 .article-header {
   color: #1098ad;
-  font-size: 35px;
+  font-size: 36px;
   margin-bottom: 40px;
+  position: relative;
+}
+.article-header::after {
+  content: "TOP";
+  display: inline-block;
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  position: absolute;
+  top: -15px;
+  right: -25px;
 }
 
 article {
