--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -15,8 +15,20 @@ body {
 /* PRODUCT */
 .product {
   border: 4px solid black;
+  position: relative;
 }
+.sale-tab {
+  background-color: #f00;
+  padding: 5px 10px;
+  color: #fff;
+  font-weight: bold;
+  letter-spacing: 2px;
 
+  display: inline-block;
+  position: absolute;
+  top: -16px;
+  left: -32px;
+}
 .product-title {
   text-align: center;
   font-size: 22px;
