--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -17,18 +17,53 @@ body {
   border: 4px solid black;
   position: relative;
 }
+
 .sale-tab {
   background-color: #f00;
   padding: 5px 10px;
   color: #fff;
   font-weight: bold;
   letter-spacing: 2px;
-
   display: inline-block;
   position: absolute;
   top: -16px;
-  left: -32px;
+  left: -38px;
 }
+
+.box-1,
+.box-2,
+.box-3,
+.box-4,
+.box-5,
+.box-6 {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+  display: inline-block;
+}
+.box-1 {
+  background-color: #000;
+}
+.box-2 {
+  background-color: #00f;
+}
+.box-3 {
+  background-color: #f00;
+}
+.box-4 {
+  background-color: #ffa500;
+}
+.box-5 {
+  background-color: #00c400;
+}
+.box-6 {
+  background-color: #c74a4a;
+}
+
+.color-boxes {
+  margin-bottom: 25px;
+}
+
 .product-title {
   text-align: center;
   font-size: 22px;
