--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -31,38 +31,33 @@ body {
   left: -32px;
 }
 
-.box-1,
-.box-2,
-.box-3,
-.box-4,
-.box-5,
-.box-6 {
+.colors {
+  margin-bottom: 25px;
+}
+
+.color {
   width: 18px;
   height: 18px;
   margin-right: 10px;
   display: inline-block;
 }
-.box-1 {
+.black-box {
   background-color: #000;
 }
-.box-2 {
+.blue-box {
   background-color: #00f;
 }
-.box-3 {
+.red-box {
   background-color: #f00;
 }
-.box-4 {
+.orange-box {
   background-color: #ffa500;
 }
-.box-5 {
+.green-box {
   background-color: #00c400;
 }
-.box-6 {
+.brown-box {
   background-color: #c74a4a;
-}
-
-.color-boxes {
-  margin-bottom: 25px;
 }
 
 .product-title {
