--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -11,15 +11,16 @@ body {
 }
 
 .container {
-  width: 760px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
 }
 
 .main-header {
-  background-color: #f7f7f7;
+  background-color: #efefef;
   padding: 30px 0 30px 0;
+  margin-bottom: 50px;
 }
 
 .main-header-title {
@@ -27,17 +28,52 @@ body {
   text-transform: uppercase;
   font-style: italic;
   font-size: 26px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  float: left;
 }
+
 .main-header-title::first-letter {
   font-style: normal;
   margin-right: 5px;
+  margin-left: 25px;
+}
+
+nav {
+  margin-top: 10px;
+  float: right;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+  margin-right: 25px;
+}
+
+a:visited {
+  color: #1098ad;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline solid orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
 }
 
 .article-header {
   color: #1098ad;
   font-size: 36px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   position: relative;
 }
 .article-header::after {
@@ -58,7 +94,7 @@ article {
 }
 
 aside {
-  background-color: #f7f7f7;
+  background-color: #efefef;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding-top: 40px;
@@ -119,26 +155,6 @@ li {
 
 .related {
   list-style: none;
-}
-
-a:link {
-  color: #1098ad;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #1098ad;
-}
-
-a:hover {
-  color: orangered;
-  font-weight: bold;
-  text-decoration: underline solid orangered;
-}
-
-a:active {
-  background-color: black;
-  font-style: italic;
 }
 
 /* ============ Resolving Conflicts ============*/
