--- a/02-HTML-Fundamentals/02-Solution Exercise/style.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style.css
@@ -20,7 +20,7 @@ body {
 .main-header {
   background-color: #efefef;
   padding: 30px 0 30px 0;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 
 .main-header-title {
@@ -73,7 +73,7 @@ a:active {
 .article-header {
   color: #1098ad;
   font-size: 36px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   position: relative;
 }
 .article-header::after {
@@ -173,4 +173,19 @@ button {
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+/* ============================================ */
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+}
+
+footer {
+  clear: both;
 }
