--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
 }
 
 .container-product {
-  width: 750px;
+  width: 820px;
   margin: 40px auto;
 }
 
@@ -71,13 +72,19 @@ body {
 /* PRODUCT INFORMATION */
 .price {
   font-size: 24px;
+  float: left;
+  margin-bottom: 20px;
 }
 .shipping {
   font-size: 12px;
   color: #777;
   text-transform: uppercase;
   font-weight: bold;
-  margin-bottom: 25px;
+  padding-top: 10px;
+  float: right;
+}
+.product-description {
+  clear: both;
 }
 
 .container-anchor {
@@ -97,6 +104,7 @@ body {
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  padding-top: 9px;
   margin-bottom: 20px;
 }
 .details-list {
@@ -124,4 +132,25 @@ body {
 .add-cart:hover {
   background-color: #fff;
   color: #000;
+}
+.img-product {
+  width: 250px;
+  height: auto;
+  margin-right: 40px;
+  float: left;
+}
+
+.price-container {
+  width: 240px;
+  height: auto;
+  margin-top: 20px;
+  margin-right: 40px;
+  float: left;
+}
+
+.details-container {
+  width: 240px;
+  height: auto;
+  margin-top: 20px;
+  float: left;
 }
