--- a/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
@@ -22,32 +22,22 @@ body {
   background-color: #efefef;
   padding: 30px 0 30px 0;
   margin-bottom: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .main-header-title {
   color: #1098ad;
   text-transform: uppercase;
   font-style: italic;
-  font-size: 26px;
-  margin-bottom: 5px;
-  float: left;
+  font-size: 28px;
 }
 
 .main-header-title::first-letter {
   font-style: normal;
   margin-right: 5px;
   margin-left: 25px;
-}
-
-nav {
-  margin-top: 10px;
-  float: right;
-}
-
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
 }
 
 a:link {
