--- a/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
@@ -43,7 +43,8 @@ body {
 a:link {
   color: #1098ad;
   text-decoration: none;
-  margin-right: 25px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 a:visited {
@@ -132,15 +133,10 @@ p {
   line-height: 1.5;
 }
 
-.list li {
+.list-html li {
   font-size: 20px;
   margin-bottom: 10px;
   margin-left: 50px;
-}
-
-.related-author {
-  font-size: 18px;
-  font-weight: bold;
 }
 
 .related {
@@ -165,20 +161,23 @@ button {
   bottom: 50px;
   right: 50px;
 }
-/* ====== Arangement by FLOATing ====== */
+/* ====== Arangement by FLEXing ====== */
 
-article {
-  width: 825px;
+.list-related li {
+  display: flex;
+  margin-bottom: 30px;
+  align-items: end;
+  gap: 25px;
+}
+
+.related-author {
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.article-aside-row {
+  display: flex;
   margin-bottom: 50px;
-  float: left;
-}
-
-aside {
-  width: 300px;
-  float: right;
-}
-
-footer {
-  clear: both;
 }
 /* ====================================== */
