--- a/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-flexbox.css
@@ -101,7 +101,7 @@ aside {
   background-color: #efefef;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding-top: 60px;
+  padding-top: 40px;
 }
 .what-HTML {
   margin: 30px 0px 30px 0px;
@@ -162,6 +162,7 @@ button {
 /* ====== Arangement by FLEXing ====== */
 .list-related {
   margin-top: 50px;
+  margin-left: 30px;
 }
 
 .list-related li {
