--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -34,13 +34,13 @@ body {
 
 .colors {
   margin-bottom: 25px;
+  display: flex;
+  gap: 15px;
 }
 
 .color {
   width: 18px;
   height: 18px;
-  margin-right: 10px;
-  display: inline-block;
 }
 .black-box {
   background-color: #000;
