--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -133,7 +133,7 @@ body {
 .img-price-details {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  gap: 40px;
   margin-bottom: -1px;
 }
 
@@ -148,11 +148,11 @@ body {
 }
 
 .price-container {
-  flex: 0 0 240px;
+  flex: 1;
   margin-top: 15px;
 }
 
 .details-container {
-  flex: 0 0 240px;
+  flex: 1;
   margin-top: 20px;
 }
