--- a/02-HTML-Fundamentals/02-Solution Exercise/style-grid.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-grid.css
@@ -160,7 +160,7 @@ button {
   right: 50px;
 }
 /* ====== Arangement by FLEXing ====== */
-.list-related {
+/* .list-related {
   margin-top: 50px;
   margin-left: 30px;
 }
@@ -187,6 +187,6 @@ button {
 
 aside {
   flex: 0 0 300px;
-}
+} */
 
 /* ====================================== */
