--- a/02-HTML-Fundamentals/02-Solution Exercise/style-grid.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-grid.css
@@ -44,6 +44,7 @@ a:link {
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
+  margin-right: 30px;
 }
 
 a:visited {
@@ -158,8 +159,8 @@ button {
   bottom: 50px;
   right: 50px;
 }
-/* ====== Arangement by FLEXing ====== */
-/* .list-related {
+/* ====== Arangement by GRID ====== */
+.list-related {
   margin-top: 50px;
   margin-left: 30px;
 }
@@ -184,8 +185,18 @@ button {
   align-items: start;
 }
 
-aside {
-  flex: 0 0 300px;
-} */
-
 /* ====================================== */
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  row-gap: 60px;
+  column-gap: 75px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1 / -1;
+}
+footer {
+  grid-column: 1 / -1;
+}
