--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -17,6 +17,8 @@ body {
 .product {
   border: 4px solid black;
   position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .sale-tab {
@@ -68,6 +70,7 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #e7e7e7;
+  grid-column: 1 / -1;
 }
 
 /* === Using FLEX method === */
@@ -123,6 +126,7 @@ body {
   width: 100%;
   border-top: 4px solid black;
   padding: 10px 0;
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
@@ -130,12 +134,12 @@ body {
   color: #000;
 }
 
-.img-price-details {
+/* .img-price-details {
   display: flex;
   align-items: flex-start;
   gap: 40px;
   margin-bottom: -1px;
-}
+} */
 
 .img-product {
   width: 250px;
@@ -148,11 +152,11 @@ body {
 }
 
 .price-container {
-  flex: 1;
+  /* flex: 1; */
   margin-top: 15px;
 }
 
 .details-container {
-  flex: 1;
+  /* flex: 1; */
   margin-top: 20px;
 }
