--- a/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
+++ b/02-HTML-Fundamentals/02-Solution Exercise/style-challenge2.css
@@ -19,6 +19,7 @@ body {
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
 }
 
 .sale-tab {
@@ -127,6 +128,7 @@ body {
   border-top: 4px solid black;
   padding: 10px 0;
   grid-column: 1 / -1;
+  margin-top: -4px;
 }
 
 .add-cart:hover {
@@ -134,15 +136,8 @@ body {
   color: #000;
 }
 
-/* .img-price-details {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
-  margin-bottom: -1px;
-} */
-
 .img-product {
-  width: 250px;
+  width: 100%;
   height: auto;
 }
 
@@ -152,11 +147,9 @@ body {
 }
 
 .price-container {
-  /* flex: 1; */
   margin-top: 15px;
 }
 
 .details-container {
-  /* flex: 1; */
   margin-top: 20px;
 }
