--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -12,10 +12,10 @@ Default: 1;
 
 --- 02 COLORS
 - Primary: #e67e22
-- Tints: 
+- Tints: #fae5d3
 - Shades: 
 - Accents: 
-- Greys: #555 
+- Greys: #555; #333; 
 
 
 --- 03 Images (resources: unsplash.com; uifaces.co; )
@@ -50,11 +50,33 @@ body {
   color: #555;
 }
 
+.section-hero {
+  background-color: #fae5d3;
+  padding: 9.6rem 0;
+}
+
 .hero {
   max-width: 130rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  letter-spacing: -0.5px;
+  color: #333;
+  margin-bottom: 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
 }
 
 .hero-img {
