--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -12,7 +12,7 @@ Default: 1;
 
 --- 02 COLORS
 - Primary: #e67e22
-- Tints: #fae5d3
+- Tints: #fae5d3; #fdf2e9;
 - Shades: 
 - Accents: 
 - Greys: #555; #333; 
@@ -51,7 +51,7 @@ body {
 }
 
 .section-hero {
-  background-color: #fae5d3;
+  background-color: #fdf2e9;
   padding: 9.6rem 0;
 }
 
@@ -77,6 +77,45 @@ body {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  font-size: 2rem;
+  text-decoration: none;
+  padding: 1.6rem 3.2rem;
+  border-radius: 9px;
+
+  transition: background-color 0.3s;
+}
+
+.bnt-ful:link,
+.bnt-ful:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.bnt-ful:hover,
+.bnt-ful:active {
+  background-color: #cf711f;
+}
+
+.bnt-outline:link,
+.bnt-outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.bnt-outline:hover,
+.bnt-outline:active {
+  background-color: #fdf2e9;
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
 
 .hero-img {
