--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -44,7 +44,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
@@ -112,6 +112,7 @@ body {
 .bnt-outline:active {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
+  /* box-shadow: inset 0 0 0 3px #cf711f; */
 }
 
 .margin-right-sm {
