--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -14,7 +14,7 @@ Default: 1;
 - Primary: #e67e22
 - Tints: #fae5d3; #fdf2e9;
 - Shades: 
-- Accents: 
+- Accents: #cf711f;
 - Greys: #555; #333; 
 
 
@@ -84,11 +84,13 @@ body {
   display: inline-block;
 
   font-size: 2rem;
+  font-weight: 600;
   text-decoration: none;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
 
   transition: background-color 0.3s;
+  /* transition: box-shadow 12s; */
 }
 
 .bnt-ful:link,
@@ -121,4 +123,39 @@ body {
 
 .hero-img {
   width: 100%;
+}
+
+.delivered-meals {
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+
+  margin-top: 8rem;
+}
+
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  width: 4.8rem;
+  height: 4.8rem;
+  border-radius: 50%;
+  border: 3px solid #fdf2e9;
+
+  margin-right: -1.6rem;
+}
+
+.delivered-imgs img:last-child {
+  margin-right: 0;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.delivered-text span {
+  font-weight: 700;
+  color: #cf711f;
 }
