--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -3,11 +3,16 @@
 - Font sizes (px):
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 
-- Font weights (px): 
+- Font weights: 
 Default: 400;
+Medium: 500; 
+Semi-Bold: 600; 
+Bold: 700; 
 
 - Line heights: 
 Default: 1;
+Small: 1.05;
+Paragraph default: 1.6;
 
 
 --- 02 COLORS
@@ -25,6 +30,7 @@ Default: 1;
 
 
 --- 06 BORDER-RADIUS
+Default: 9px; 
 
 
 --- 07 WHITESPACE
@@ -130,11 +136,13 @@ body {
 .main-nav-list {
   list-style: none;
   display: flex;
+  align-items: center;
   gap: 3.2rem;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
+  display: inline-block;
   text-decoration: none;
   font-size: 1.8rem;
   font-weight: 500;
@@ -145,6 +153,19 @@ body {
 .main-nav-link:hover,
 .main-nav-link:active {
   color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 
 /***********************************/
