--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -59,6 +59,29 @@ body {
 /***********************************/
 /*   GENERAL REUSABLE COMPONENTS   */
 /***********************************/
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2--cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3--cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4--cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -238,27 +261,4 @@ body {
 .section-how {
   padding: 9.6rem 0;
   background-color: aquamarine;
-}
-
-.container {
-  max-width: 120rem;
-  padding: 0 3.2rem;
-  margin: 0 auto;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.container div {
-  height: 15rem;
-  border: 5px solid #cf711f;
-  justify-self: stretch;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
