--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -77,7 +77,7 @@
 
 .hero-description {
   font-size: 2rem;
-  line-height: 1.6;
+  line-height: 1.8;
   margin-bottom: 4.8rem;
 }
 
@@ -134,6 +134,17 @@
   margin-bottom: 1.2rem;
 }
 
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .step-img {
-  width: 50%;
+  width: 35%;
 }
