--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -124,7 +124,7 @@
 /*     FEATURED SECTION            */
 /***********************************/
 .section-featured {
-  padding: 4.8rem 0;
+  padding: 4.8rem 0 3.2rem;
 }
 
 .heading-featured-in {
@@ -138,6 +138,7 @@
 
 .logos {
   display: flex;
+  justify-content: space-around;
 }
 
 .logos img {
