--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -134,6 +134,7 @@
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
+  color: #888;
 }
 
 .logos {
@@ -143,7 +144,10 @@
 
 .logos img {
   height: 3.2rem;
+  filter: brightness(0%);
+  opacity: 50%;
 }
+
 /***********************************/
 /*   HOW IT WORKS SECTION          */
 /***********************************/
