--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -176,3 +176,10 @@
 .step-img {
   width: 35%;
 }
+
+/***********************************/
+/*          MEALS SECTION          */
+/***********************************/
+.section-meals {
+  padding: 9.6rem 0;
+}
