--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -202,6 +202,12 @@
   font-size: 1.8rem;
 }
 
+.meal-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: #e67e22;
+}
+
 .meal-img {
   width: 100%;
 }
