--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -184,6 +184,16 @@
   padding: 9.6rem 0;
 }
 
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #333;
+  background-color: #51cf66;
+  border-radius: 100px;
+}
+
 .meal-title {
   font-size: 2.4rem;
   color: #333;
