--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -184,6 +184,20 @@
   padding: 9.6rem 0;
 }
 
+.meal {
+  box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  overflow: hidden;
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+  margin-bottom: 1.2rem;
+}
+
 .tag {
   display: inline-block;
   padding: 0.4rem 0.8rem;
@@ -192,6 +206,7 @@
   color: #333;
   background-color: #51cf66;
   border-radius: 100px;
+  font-weight: 600;
 }
 
 .meal-title {
