--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -196,6 +196,8 @@
 
 .meal-tags {
   margin-bottom: 1.2rem;
+  display: flex;
+  gap: 0.8rem;
 }
 
 .tag {
@@ -204,9 +206,18 @@
   font-size: 1.2rem;
   text-transform: uppercase;
   color: #333;
-  background-color: #51cf66;
   border-radius: 100px;
   font-weight: 600;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+.tag--vegan {
+  background-color: #94d82d;
+}
+.tag--paleo {
+  background-color: #ffd43b;
 }
 
 .meal-title {
