--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -24,7 +24,7 @@ Paragraph default: 1.6;
 - Tints: #fae5d3; #fdf2e9;
 - Shades: 
 - Accents: #cf711f;
-- Greys: #555; #333; 
+- Greys: #6f6f6f #555; #333; 
 
 
 --- 03 Images (resources: unsplash.com; uifaces.co; )
