--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -306,7 +306,7 @@
   padding: 1.6rem;
 }
 
-/* ==============================================  */
+/* =======================================  */
 /*   SCALE IMG Without OVERFLOW the parent element */
 .gallery-item {
   overflow: hidden;
@@ -321,11 +321,49 @@
 .gallery-item img:hover {
   transform: scale(1.1);
 }
-/* ================================================ */
+/* ======================================== */
 
 /***********************************/
 /*          PRICING SECTION          */
 /***********************************/
 .section-pricing {
   padding: 9.6rem 0;
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: #cf711f;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  color: #333;
+  font-size: 6.2rem;
+  font-weight: 600;
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sing-up {
+  text-align: center;
+  margin-top: 4.8rem;
 }
