--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -331,14 +331,19 @@
 }
 
 .pricing-plan {
-  background-color: #fdf2e9;
-  padding: 4.8rem;
   border-radius: 11px;
   width: 75%;
 }
 
 .pricing-plan--starter {
   justify-self: flex-end;
+  border: 3px solid #fdf2e9;
+  padding: 4.5rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
 }
 
 .plan-header {
