--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -344,6 +344,23 @@
 .pricing-plan--complete {
   background-color: #fdf2e9;
   padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "Best value !";
+  color: #333;
+  font-size: 1.4rem;
+  background-color: #ffd43b;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 0.8rem 6.4rem;
+
+  position: absolute;
+  top: 6%;
+  right: -15%;
+  transform: rotate(45deg);
 }
 
 .plan-header {
