--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -22,7 +22,7 @@ Paragraph default: 1.6;
 --- 02 COLORS
 - Primary: #e67e22
 - Tints: #fae5d3; #fdf2e9;
-- Shades: 
+- Shades: #eb984e
 - Accents: #cf711f;
 - Greys: #6f6f6f #555; #333; 
 
