--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -24,7 +24,7 @@ Paragraph default: 1.6;
 - Tints: #fae5d3; #fdf2e9;
 - Shades: #eb984e
 - Accents: #cf711f;
-- Greys: #6f6f6f #555; #333; 
+- Greys: #6f6f6f #555; #333; #45260a;
 
 
 --- 03 Images (resources: unsplash.com; uifaces.co; )
@@ -151,28 +151,35 @@ body {
   /* transition: box-shadow 12s; */
 }
 
-.bnt-ful:link,
-.bnt-ful:visited {
+.btn-ful:link,
+.btn-ful:visited {
   background-color: #e67e22;
   color: #fff;
 }
 
-.bnt-ful:hover,
-.bnt-ful:active {
+.btn-ful:hover,
+.btn-ful:active {
   background-color: #cf711f;
 }
 
-.bnt-outline:link,
-.bnt-outline:visited {
+.btn-outline:link,
+.btn-outline:visited {
   background-color: #fff;
   color: #555;
 }
 
-.bnt-outline:hover,
-.bnt-outline:active {
+.btn-outline:hover,
+.btn-outline:active {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
   /* box-shadow: inset 0 0 0 3px #cf711f; */
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
 }
 
 .link:link,
