--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -50,6 +50,10 @@ Default: 9px;
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.6rem rgba(230, 125, 34, 0.5);
+}
 html {
   font-size: 62.5%;
 }
@@ -180,6 +184,11 @@ body {
   color: #fdf2e9;
   align-self: end;
   padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
