--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -508,3 +508,10 @@
 .cta *:focus {
   box-shadow: 0 0 0 0.6rem rgba(253, 242, 233, 0.5);
 }
+
+/***********************************/
+/*         FOOTER SECTION          */
+/***********************************/
+.footer {
+  padding: 9.6rem 0;
+}
