--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -24,7 +24,13 @@ Paragraph default: 1.6;
 - Tints: #fae5d3; #fdf2e9;
 - Shades: #eb984e
 - Accents: #cf711f;
-- Greys: #6f6f6f #555; #333; #45260a;
+- Greys:
+#888;
+#767676; 
+#6f6f6f; 
+#555; 
+#45260a;
+#333; 
 
 
 --- 03 Images (resources: unsplash.com; uifaces.co; )
