--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -434,7 +434,7 @@
 /*          CTA SECTION          */
 /***********************************/
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4rem 0 12.8rem 0;
 }
 
 .cta {
@@ -513,7 +513,12 @@
 /*         FOOTER SECTION          */
 /***********************************/
 .footer {
-  padding: 9.6rem 0;
+  padding: 12.8rem 0;
+  border-top: 2px solid #eee;
+}
+
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
 }
 
 .logo-col {
@@ -549,6 +554,17 @@
   font-size: 1.8rem;
   font-weight: 500;
   margin-bottom: 4rem;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #767676;
+}
+
+.address {
+  margin-bottom: 2.4rem;
 }
 
 .footer-nav {
