--- a/08-Omnifood-Responsive/css/style.css
+++ b/08-Omnifood-Responsive/css/style.css
@@ -181,7 +181,7 @@
 /*          MEALS SECTION          */
 /***********************************/
 .section-meals {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 9.6rem 0;
 }
 
 .meal {
