--- a/08-Omnifood-Responsive/css/general.css
+++ b/08-Omnifood-Responsive/css/general.css
@@ -61,6 +61,7 @@ Default: 9px;
   box-shadow: 0 0 0 0.6rem rgba(230, 125, 34, 0.5);
 }
 html {
+  /* Received by 10px : 16px = 0.625 */
   font-size: 62.5%;
 }
 
