--- a/08-Omnifood-Responsive/css/queries.css
+++ b/08-Omnifood-Responsive/css/queries.css
@@ -47,11 +47,15 @@
     padding: 0 3.2rem;
   }
 
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+
   .hero {
     gap: 4.8rem;
   }
 
-  .main-nav-list {
-    gap: 3.2rem;
+  .testimonials-container {
+    padding: 9.6rem 3.2rem;
   }
 }
