--- a/08-Omnifood-Responsive/css/queries.css
+++ b/08-Omnifood-Responsive/css/queries.css
@@ -61,7 +61,7 @@
 }
 
 /*****************************************/
-/*      BELOW 1200px - for Tablets       */
+/*      BELOW 944px - for Tablets       */
 /*****************************************/
 
 /* 59em = 944px : 16px */
@@ -89,5 +89,37 @@
   .delivered-meals {
     justify-content: center;
     margin-top: 3.2rem;
+  }
+
+  .logos img {
+    height: 2.4rem;
+  }
+
+  .step-number {
+    font-size: 7.4rem;
+  }
+
+  .meal-content {
+    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
+  }
+
+  .section-testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .cta {
+    grid-template-columns: 3fr 2fr;
+  }
+
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+
+  .btn--form {
+    margin-top: 1.6rem;
   }
 }
