--- a/08-Omnifood-Responsive/css/general.css
+++ b/08-Omnifood-Responsive/css/general.css
@@ -12,8 +12,9 @@ Bold: 700;
 - Line heights: 
 Default: 1;
 Small: 1.05;
-Medium: 1.2
+Medium: 1.2;
 Paragraph default: 1.6;
+Lrge: 1.8;
 
 - Letter spacing
 -0.5px
@@ -230,6 +231,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
