--- a/08-Omnifood-Responsive/css/queries.css
+++ b/08-Omnifood-Responsive/css/queries.css
@@ -61,7 +61,7 @@
 }
 
 /*****************************************/
-/*      BELOW 944px - for Tablets       */
+/*      BELOW 944px - for Tablets        */
 /*****************************************/
 
 /* 59em = 944px : 16px */
@@ -177,5 +177,20 @@
   .main-nav-link:link,
   .main-nav-link:visited {
     font-size: 3rem;
+  }
+}
+
+/*****************************************/
+/*   BELOW 704px - for Smaller Tablets   */
+/*****************************************/
+@media (max-width: 44em) {
+  .grid--3--cols,
+  .grid--4--cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1 / -1;
+    justify-self: center;
   }
 }
